--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 html {
     box-sizing: border-box;
+    min-height: 100vh;
     font-size: 10px;
-    background: #ffc600;
+    background: #fff;
 }
 
 *, *:before, *:after {
@@ -12,6 +13,14 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Amatic SC', cursive;
+    text-align: center;
+}
+
+button {
+    padding: 10px 30px;
+    margin: 20px;
+    background-color: inherit;
+    font-size: 25px;
 }
 
 h1 {
